cmake_minimum_required(VERSION 3.10)
project(chap4)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES app/Pr4-1.cpp app/Pr4-2.cpp app/Pr4-3.cpp app/Pr4-4.cpp
        app/Pr4-5.cpp app/Pr4-6.cpp app/Pr4-7.cpp app/Pr4-8 app/Pr4-9.cpp
        app/Pr4-10.cpp app/Pr4-11.cpp app/Pr4-12.cpp app/Pr4-13 app/Pr4-14.cpp
        app/Pr4-15.cpp app/Pr4-16.cpp app/Pr4-17.cpp app/Pr4-18 app/Pr4-19.cpp
        app/Pr4-20.cpp app/Pr4-21.cpp app/Pr4-22.cpp app/Pr4-23 app/Pr4-24.cpp
        app/Pr4-25.cpp app/Pr4-26.cpp app/Pr4-27.cpp app/Pr4-28 app/Pr4-29.cpp
        app/Pr4-30.cpp)
add_executable(Pr4-1.exe app/Pr4-1.cpp)
add_executable(Pr4-2.exe app/Pr4-2.cpp)
add_executable(Pr4-3.exe app/Pr4-3.cpp)
add_executable(Pr4-4.exe app/Pr4-4.cpp)
add_executable(Pr4-5.exe app/Pr4-5.cpp)
add_executable(Pr4-6.exe app/Pr4-6.cpp)
add_executable(Pr4-7.exe app/Pr4-7.cpp)
add_executable(Pr4-8.exe app/Pr4-8.cpp)
add_executable(Pr4-9.exe app/Pr4-9.cpp)
add_executable(Pr4-10.exe app/Pr4-10.cpp)
add_executable(Pr4-11.exe app/Pr4-11.cpp)
add_executable(Pr4-12.exe app/Pr4-12.cpp)
add_executable(Pr4-13.exe app/Pr4-13.cpp)
add_executable(Pr4-14.exe app/Pr4-14.cpp)
add_executable(Pr4-15.exe app/Pr4-15.cpp)
add_executable(Pr4-16.exe app/Pr4-16.cpp)
add_executable(Pr4-17.exe app/Pr4-17.cpp)
add_executable(Pr4-18.exe app/Pr4-18.cpp)
add_executable(Pr4-19.exe app/Pr4-19.cpp)
add_executable(Pr4-20.exe app/Pr4-20.cpp)
add_executable(Pr4-21.exe app/Pr4-21.cpp)
add_executable(Pr4-22.exe app/Pr4-22.cpp)
add_executable(Pr4-23.exe app/Pr4-23.cpp)
add_executable(Pr4-24.exe app/Pr4-24.cpp)
add_executable(Pr4-25.exe app/Pr4-25.cpp)
add_executable(Pr4-26.exe app/Pr4-26.cpp)
add_executable(Pr4-27.exe app/Pr4-27.cpp)
add_executable(Pr4-28.exe app/Pr4-28.cpp)
add_executable(Pr4-29.exe app/Pr4-29.cpp)
add_executable(Pr4-30.exe app/Pr4-30.cpp)



